# rageval_nba

./: .gitignore  AUDIT.md  LICENSE  PROJECT_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: judge_calibration.md  prompt_evolution.md
examples/: nba_test_suite.yaml
examples/corpus/: articles.json
prompts/judges/correctness/: v1.txt
prompts/judges/faithfulness/: v1.txt
prompts/judges/relevance/: v1.txt
prompts/judges/routing/: v1.txt
prompts/router/: v1.txt
prompts/sql_agent/: v1.txt  v2.txt  v3.txt
prompts/synthesizer/: v1.txt
scripts/: build_corpus.py  build_stats_db.py  calibrate_judge.py
src/rageval/: __init__.py  cache.py  cli.py  embeddings.py  evaluator.py  llm_client.py  reporting.py  sqlite_vec.py  types.py
src/rageval/demo/: rag_agent.py  router.py  sql_agent.py  synthesizer.py  system.py
src/rageval/examples/: nba_test_suite.yaml
src/rageval/metrics/: __init__.py  base.py  judge.py  retrieval.py  structured.py
src/rageval/templates/: report.html.j2
tests/: test_build_corpus.py  test_calibrate.py  test_cli.py  test_demo_system.py  test_evaluator.py  test_judges.py  test_llm_client.py  test_nba_suite_milestone7.py  test_rag_agent.py  test_reporting.py  test_retrieval_metrics.py  test_router.py  test_smoke.py  test_sql_agent.py  test_structured_metrics.py  test_synthesizer.py  test_types.py
tests/fixtures/: correctness_calibration.yaml  faithfulness_calibration.yaml  relevance_calibration.yaml  routing_calibration.yaml  valid_suite.yaml
